fix mobile padding so social icons are visible on safari, fix select dropdown styling safari, add padding to logo title, fix elixir secondary feature overflow, fix events aspect ratio on mobile, fix sage svg issue

--- a/src/assets/css/components/_logo-list.scss
+++ b/src/assets/css/components/_logo-list.scss
@@ -8,6 +8,7 @@
   text-align: center;
   max-width: 48.75rem;
   margin: 0 auto 4.5rem;
+  padding: 0 1rem;
 }
 
 .logo-list__wrapper {
@@ -36,7 +37,6 @@
 }
 
 .logo-list__item {
-  padding: 1rem;
   flex-shrink: 0;
   flex-grow: 1;
 }
