--- a/src/assets/css/components/_nav-aside.scss
+++ b/src/assets/css/components/_nav-aside.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: flex-end;
   flex-wrap: wrap;
-  padding: 1rem 1rem 3.75rem;
+  padding: 1rem 1rem 9rem;
 }
 
 .nav-aside__brand {
