--- a/src/assets/css/components/_secondary-feature.scss
+++ b/src/assets/css/components/_secondary-feature.scss
@@ -7,7 +7,7 @@
   box-shadow: 0px 2px 5px 0px rgba(135, 135, 135, 0.5);
 
   .split-content__feature & {
-    margin: 0;
+    margin: auto;
   }
 }
 
