--- a/src/assets/css/components/_talk-card.scss
+++ b/src/assets/css/components/_talk-card.scss
@@ -1,5 +1,5 @@
 .talk-card__image-overlay {
-  aspect-ratio: 21/9;
+  aspect-ratio: initial;
 }
 
 .talk-card__content {
